hydra/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hydra
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
      - name: hydra
        image: linuxserver/hydra
        imagePullPolicy: Always
        ports:
        - containerPort: 5075
        volumeMounts:
        - name: hydra
          mountPath: /config
          subPath: docker/hydra
        - name: hydra
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: hydra
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
