hydra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hydra
  labels:
    app: hydra
spec:
  ports:
  - name: http
    port: 5075
  selector:
    app: hydra
